--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,7 +20,10 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* allow synthetic default imports*/
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
