--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-multi-carousel": "^2.8.6",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
